--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,11 @@ main {
     width: 100vw;
 }
 
+div#formulario > p {
+    display: block;
+    text-align: center;
+}
+
 section#login {
     position: absolute;
     top: 50%;
@@ -56,4 +61,52 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > div.campo {
+    height: 40px;
+    margin: 5px 0px;
+    width: 100%;
+
+}
+div.campo > label {
+    display: none;
+    
+    
+}
+
+form > input[type=submit] {
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    background-color: #a248dd;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+form > input[type=submit]:hover {
+    background-color: #5f2c82;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 1px solid #a248dd;
+}
+
+form > a.botao:hover {
+    background-color: #5f2c82;
+    color: white;
 }
