--- a/style/media-query.css
+++ b/style/media-query.css
@@ -7,6 +7,7 @@
     }
     section#login {
         width:80vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -22,13 +23,14 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /*CONFIGURAÇÃO PARA TABLET*/
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     
     section#login {
-        width: 950px;
+        width: 80vw;
+        height: 400px;
     }
 
     section#login > div#imagem {
