--- a/style/style.css
+++ b/style/style.css
@@ -64,15 +64,33 @@ div#formulario > p {
 }
 
 form > div.campo {
+    display: block;
     height: 40px;
     margin: 5px 0px;
     width: 100%;
+    border-radius: 8px;
+    background-color: #5f2c82;
 
 }
 div.campo > label {
     display: none;
     
+}
+div.campo > i {
+    font-size: 2em;
+    padding: 5px;
+    width: 40px;
     
+}
+div.campo > input {
+    
+    font-size: 1em;
+    height: 100%;
+    width: calc(100% - 45px);
+    transform: translateY(-11px);
+    border: 0px;
+    padding: 4px;
+    border-radius: 8px;
 }
 
 form > input[type=submit] {
